# mapy-com-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.claude/agents/: review-agent.md  test-agent.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
src/mapy_com_mcp/: _uc_encoder.py  server.py  urls.py
src/mapy_com_mcp/tools/: __init__.py  ping.py  points_url.py  route_url.py
tests/: README.md  conftest.py  test_ping.py  test_points_url.py  test_route_url.py  test_server.py  test_uc_encoder.py  test_urls.py
