[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapy-com-mcp"
version = "0.0.0"
description = "Unofficial MCP server for mapy.com. Not affiliated with, endorsed by, or supported by Seznam.cz a.s., operators of mapy.com."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Vit Kostejn", email = "emma@outfindo.com" },
]
keywords = ["mcp", "model-context-protocol", "mapy", "mapy.com", "maps", "geocoding"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.scripts]
mapy-com-mcp = "mapy_com_mcp.server:main"

[project.urls]
Homepage = "https://github.com/kostejnv/mapy-com-mcp"
Source = "https://github.com/kostejnv/mapy-com-mcp"
Issues = "https://github.com/kostejnv/mapy-com-mcp/issues"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mapy_com_mcp"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
